[package]
name = "r2-image-picker"
version = "0.2.0"
edition = "2021"

[dependencies]
arboard = "3.6.1"
aws-config = "1.8.12"
aws-sdk-s3 = { version = "1.120.0", features = ["behavior-version-latest"] }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dotenvy = "0.15.7"
image = "0.25.9"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.4", default-features = false, features = ["crossterm", "image-defaults"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "rt", "sync", "time"] }
tokio-stream = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
